--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   "dependencies": {
     "@clerk/nextjs": "^6.9.6",
     "@clerk/themes": "^2.2.3",
+    "@lexical/react": "^0.16.1",
+    "@liveblocks/client": "^2.15.2",
+    "@liveblocks/react": "^2.15.2",
+    "@liveblocks/react-lexical": "^2.15.2",
+    "@liveblocks/react-ui": "^2.15.2",
     "@radix-ui/react-slot": "^1.1.1",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "jsm-editor": "^0.0.12",
+    "lexical": "^0.16.1",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "react": "^19.0.0",
