--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@clerk/themes": "^2.2.3",
     "@lexical/react": "^0.16.1",
     "@liveblocks/client": "^2.15.2",
+    "@liveblocks/node": "^2.15.2",
     "@liveblocks/react": "^2.15.2",
     "@liveblocks/react-lexical": "^2.15.2",
     "@liveblocks/react-ui": "^2.15.2",
