--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsm-editor": "^0.0.12",
     "lexical": "^0.16.1",
     "lucide-react": "^0.469.0",
+    "nanoid": "^5.0.9",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
