--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "@liveblocks/react": "^2.15.2",
     "@liveblocks/react-lexical": "^2.16.1",
     "@liveblocks/react-ui": "^2.15.2",
+    "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
+    "@sentry/nextjs": "^8.51.0",
     "@shadcn/ui": "^0.0.4",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
